--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,19 +1,18 @@
 fastapi
-uvicorn
+uvicorn[standard]
 python-multipart
 nltk
 spacy
-textstat
+textstat==0.7.3
 transformers
 sentence-transformers
 torch
 pydantic
-python-jose
+python-jose[cryptography]
 sqlalchemy
-dotenv
-psycopg2
-passlib
+python-dotenv
+psycopg2-binary
+passlib[bcrypt]
 PyJWT
 emoji
-bcrypt
 openai
