--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - .:/app
     env_file:
       - .env
+    command: python3 -m uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       - db
 
