added example environmental variables

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,21 +1,21 @@
 # Database
-DATABASE_URL=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<db>
+POSTGRES_USER=your_username
+POSTGRES_PASSWORD=your_password
+POSTGRES_DB=your_db_name
 
 # FastAPI
-SECRET_KEY=
-ALGORITHM=
-ACCESS_TOKEN_EXPIRE_MINUTES=
+SECRET_KEY=generate_a_secure_random_key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # Apple Sign-In
-APPLE_KEYS_URL=
-APPLE_AUDIENCE=
-APPLE_ISSUER=
+APPLE_KEYS_URL=https://appleid.apple.com/auth/keys
+APPLE_AUDIENCE=your.app.bundle.id
+APPLE_ISSUER=https://appleid.apple.com
 
 # OpenAI Models
-OPENAI_API_KEY=
-OPENAI_CHAT_MODEL=
-OPENAI_VISION_MODEL=
-OPENAI_EMBED_MODEL=
+OPENAI_API_KEY=sk-...
+OPENAI_CHAT_MODEL=gpt-4
+OPENAI_VISION_MODEL=gpt-4-vision-preview
+OPENAI_EMBED_MODEL=text-embedding-ada-002
