--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,18 +1,21 @@
 # Database
 DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<db>
-POSTGRES_USER=your_username
-POSTGRES_PASSWORD=your_password
-POSTGRES_DB=your_db_name
 
 # FastAPI
 SECRET_KEY=generate_a_secure_random_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS = 7
 
 # Apple Sign-In
 APPLE_KEYS_URL=https://appleid.apple.com/auth/keys
 APPLE_AUDIENCE=your.app.bundle.id
 APPLE_ISSUER=https://appleid.apple.com
+
+# Google Sign-In
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 
 # OpenAI Models
 OPENAI_API_KEY=sk-...
