--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,45 @@ nltk_data/
 .env
 
 # ------------------------
+# Node / Vite / React
+# ------------------------
+
+# Dependencies and builds
+node_modules/
+dist/
+dist-ssr/
+*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ------------------------
 # macOS System Files
 # ------------------------
 .DS_Store
 
 # ------------------------
-# Xcode / Swift / iOS
+# VSCode / Editor Settings
+# ------------------------
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Allow this VSCode config
+!.vscode/extensions.json
+
+# ------------------------
+# Swift / iOS (if applicable)
 # ------------------------
 
 # User-specific settings
@@ -43,13 +76,3 @@ Package.resolved
 # Optional: Ignore APIManager.swift if you make local changes like IP address
 # Comment this out if you want to include it in source control
 # **/APIManager.swift
-
-# Logs
-*.log
-
-# ------------------------
-# VSCode / Editor Settings (optional)
-# ------------------------
-.vscode/
-.idea/
-*.sw?
