--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,5 +1,8 @@
 # Database
 DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<db>
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 
 # FastAPI
 SECRET_KEY=generate_a_secure_random_key
